<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:title="@string/Home" />
        <item
            android:id="@+id/nav_covid19"
            android:title="@string/Covid19info" />
        <item
            android:id="@+id/nav_donate"
            android:title="@string/Donate" />
        <item
            android:id="@+id/nav_bulletin"
            android:title="@string/Bulletin" />
        <item
            android:id="@+id/nav_testing_centers"
            android:title="@string/TestingCenters" />
        <item
            android:id="@+id/Vaccine"
            android:title="Vaccine" />
        <item
            android:id="@+id/contact_us"
            android:title="@string/ContactUs" />

    </group>

</menu>